# Personal_Education_Assistant

./: .env.example  .gitignore  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AIAssistantChat.tsx  CourseAnalytics.tsx  ExaminerChat.tsx  TagPicker.tsx  TestingInterface.tsx
client/src/lib/: api.ts  auth.ts
client/src/pages/: AuthPage.tsx  CourseDetailStudent.tsx  CourseDetailTeacher.tsx  Index.tsx  StudentDashboard.tsx  TeacherDashboard.tsx
client/src/types/: chat.ts  course.ts  exam.ts  index.ts  lab.ts  models.ts  recommendation.ts  report.ts  testing.ts  user.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  fontsource.d.ts  index.css  main.tsx
frontend/src/api/: auth.ts  chat.ts  client.ts  courses.ts  exam.ts  labs.ts  recommendations.ts  reports.ts  tests.ts
frontend/src/store/: authStore.ts  examStore.ts
frontend/src/utils/: constants.ts
reports/: ISSUES_REPORT.md  RAG_REPORT.md
server/: Dockerfile  requirements.txt
server/src/: constants.py  enums.py  log.py  main.py  seed.py  settings.py
server/src/agents/: __init__.py
server/src/api/: __init__.py  app.py  models.py  server.py
server/src/mcp_servers/: education_tools.py
server/src/models/: __init__.py  course.py  enums.py  exam.py  lab.py  report.py  user.py
server/src/rag/: chain.py  indexer.py  memory.py  queries.py  tools.py
(+155 files in other folders)
