[project]
name = "personal-agentic-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2>=2.9.10",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]
